# AdvancedML

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pyrightconfig.json  setup.cfg
config/: features-task1.txt  features-task3.txt  task1.yaml  task2.yaml  task3.yaml  task4.yaml
data/task1/: sample.csv  y_train.csv
src/: task0.py  task1.py  task2.py  task3.py  task3_nn.py  task4.py  typings.py
src/models/: simple_nn.py  task3_nn.py  task4_nn.py
src/utilities/: data.py  dataset.py  model.py  nn.py
