[tool.poetry]
name = "advanced-ml"
version = "1.0.0"
description = "Repository for projects of the Advanced Machine Learning (252-0535-00L) offered in Autumn 2020"

license = "MIT"
authors = ["András Geiszl", "Daniël Trujillo", "Harish Rajagopal"]

readme = "README.md"
repository = "https://github.com/rharish101/AdvancedML"
homepage = "https://github.com/rharish101/AdvancedML"

[tool.poetry.dependencies]
python = "~3.8.5"
nptyping = "^1.3.0"
numpy = "^1.19.2"
pandas = "^1.1.2"
sklearn = "^0.0"
tabulate = "^0.8.7"
tensorboard = "^2.3.0"
xgboost = "^1.2.0"
typing-extensions = "^3.7.4"
pytorch-ignite = "^0.4.2"
tensorboardx = "^2.1"
PyYAML = "^5.3.1"
hyperopt = "^0.2.5"
matplotlib = "^3.3.2"
imblearn = "^0.0"
biosppy = "^0.6.1"
torch = "^1.7.0"
tqdm = "^4.54.0"
tsfresh = "^0.17.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.7.9"
isort = "^5.5.3"
mypy = "^0.782"
pre-commit = "^2.7.1"
pydocstyle = "^5.1.1"
pylint = "^2.5.0"

[tool.black]
line-length = 100
