[tool.poetry]
name = "advanced-ml"
version = "1.0.0"
description = "Repository for projects of the Advanced Machine Learning (252-0535-00L) offered in Autumn 2020"

license = "MIT"
authors = ["András Geiszl", "Daniël Trujillo", "Harish Rajagopal"]

readme = "README.md"
repository = "https://github.com/rharish101/AdvancedML"
homepage = "https://github.com/rharish101/AdvancedML"

[tool.poetry.dependencies]
python = "^3.8"
biosppy = "^0.6.1"
hyperopt = "^0.2.5"
imblearn = "^0.0"
matplotlib = "^3.3.3"
nptyping = "^1.3.0"
numpy = "1.19.3"
pandas = "^1.1.5"
pytorch-ignite = "^0.4.2"
PyYAML = "^5.3.1"
sklearn = "^0.0"
tabulate = "^0.8.7"
tensorboard = "^2.4.0"
tensorboardx = "^2.1"
torch = "^1.7.1"
tqdm = "^4.54.1"
tsfresh = "^0.17.0"
typing-extensions = "^3.7.4"
xgboost = "^1.3.0post0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
isort = "^5.6.4"
mypy = "^0.790"
pre-commit = "^2.9.3"
pydocstyle = "^5.1.1"
pylint = "^2.6.0"

[tool.black]
line-length = 100
